--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "@types/jest": "^26.0.21",
     "@types/node": "^14.14.35",
     "jest": "^26.6.3",
@@ -17,6 +18,7 @@
   },
   "dependencies": {
     "pg": "^8.5.1",
-    "typeorm": "^0.2.31"
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.32"
   }
 }
